default/objects/Merlin_Salesforce_Log__c/Merlin_Salesforce_Log__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for monitoring communication between Merlin and Salesforce.</description>
    <label>Merlin and Salesforce Log</label>
</CustomObject>