default/objects/Merlin_Salesforce_Log__c/fields/Merlin_ID__c.field-meta.xml
<CustomField>
    <fullName>Merlin_ID__c</fullName>
    <externalId>true</externalId>
    <label>Merlin ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>