default/objects/Merlin_Salesforce_Log__c/fields/Merlin_Response__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Response__c</fullName>
    <description>Detailed response from Merlin, used for monitoring if the changes were transferred successfully.</description>
    <label>Merlin Response</label>
    <type>TextArea</type>
</CustomField>