default/objects/Merlin_Salesforce_Log__c/fields/Merlin_Success__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the communication to Merlin succeeded?</description>
    <label>Merlin Success</label>
    <type>Checkbox</type>
</CustomField>