default/objects/Merlin_Salesforce_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merlin_ID__c</columns>
    <columns>Merlin_Response__c</columns>
    <columns>Merlin_Success__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>